--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "json-server": "json-server --watch app/data/posts.json --port 3002",
-    "json-server2": "json-server --watch app/data/followPosts.json --port 3003"
+    "json-server": "json-server --watch app/data/posts.json --port 3002"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
